# yakup

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Earthfile  README.rst  dagger.json  mise.toml
.config/: mise.toml
.github/: dependabot.yml
.github/workflows/: main.yaml  main.yml
api/: Cargo.toml
api/src/: application.rs  ingress_zone.rs  lib.rs  main.rs
controller/: Cargo.toml  build.rs
controller/src/: lib.rs  main.rs  models.rs
controller/src/resource_creator/: deployment.rs  ingress.rs  mod.rs  service.rs  service_account.rs
controller/tests/: golden_file_test.rs
controller/tests/testdata/: full.yaml  minimal.yaml
dagger/: pyproject.toml
dagger/src/main/: __init__.py  rust.py
deploy/: deployment.yaml.j2
