[package]
name = "api"
version = "0.1.0"
edition = "2021"
authors = ["Morten Lied Johansen <mortenjo@ifi.uio.no>"]

[dependencies]
anyhow = "1.0.86"
k8s-openapi = { version = "0.22.0", features = ["schemars"] }
kube = { version = "0.93.1", features = ["derive"] }
schemars = { version = "0.8.21", features = ["preserve_order"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.128", features = ["preserve_order"] }
serde_yaml = "0.9.34"

[dev-dependencies]
k8s-openapi = { version = "0.22.0", features = ["latest"] }

[[bin]]
name = "crd"
path = "src/main.rs"

