[package]
name = "api"
version = "0.1.0"
edition = "2021"
authors = ["Morten Lied Johansen <mortenjo@ifi.uio.no>"]

[dependencies]
anyhow = "1.0.86"
k8s-openapi = { version = "0.27.0", features = ["schemars", "v1_34"] }
kube = { version = "2.0.1", features = ["derive"] }
schemars = { version = "1.2.0", features = ["preserve_order"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128", features = ["preserve_order"] }
serde_yaml = "0.9.34"

[[bin]]
name = "crd"
path = "src/main.rs"

