[package]
name = "controller"
version = "0.1.0"
edition = "2021"
authors = ["Morten Lied Johansen <mortenjo@ifi.uio.no>"]

[dependencies]
futures = "0.3.30"
k8s-openapi = { version = "0.22.0", features = ["latest"] }
kube = { version = "0.92.1", features = ["runtime"] }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
api = { path = "../api"}
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
opentelemetry-otlp = { version = "0.16.0", features = ["tokio"] }
tonic = "0.11.0"
opentelemetry = { version = "0.23.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio"] }
tracing-opentelemetry = "0.24.0"
either = "1.12.0"
opentelemetry-semantic-conventions = "0.15.0"
serde_json = "1.0.117"
serde_yaml = "0.9.34"
serde = { version = "1.0.203", features = ["derive", "rc"] }

[dev-dependencies]
assert-json-diff = "2.0.2"
pretty_assertions = "1.4.0"
rstest = "0.21.0"
test-generator = "0.3.1"

[build-dependencies]
build-deps = "0.1.4"
