[package]
name = "controller"
version = "0.1.0"
edition = "2021"
authors = ["Morten Lied Johansen <mortenjo@ifi.uio.no>"]

[dependencies]
futures = "0.3.30"
k8s-openapi = { version = "0.24.0", features = ["latest"] }
kube = { version = "0.98.0", features = ["runtime"] }
thiserror = "2.0.0"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
api = { path = "../api" }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.28.0"
opentelemetry-otlp = { version = "0.27.0", features = ["tokio"] }
opentelemetry = { version = "0.27.1", features = ["trace"] }
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = { version = "0.27.0", features = ["semconv_experimental"] }
either = "1.13.0"
serde_json = "1.0.128"
serde_yaml = "0.9.34"
serde = { version = "1.0.210", features = ["derive", "rc"] }
anyhow = "1.0.86"
md-5 = "0.10.6"
fast32 = "1.0.3"

[dev-dependencies]
assert-json-diff = "=2.0.2"
pretty_assertions = "=1.4.1"
rstest = "=0.24.0"
test-generator = "=0.3.1"
tower-test = "=0.4.0"
http = "=1.2.0"
hyper = "=1.6.0"

[build-dependencies]
build-deps = "0.1.4"
